# assembly

./: .gitignore  README.md
call_convention/: abi_arm.md  abi_arm64.md  abi_x64_gcc.md  convention.md
call_convention/arm64/: main.c  sum.c  sum.s
call_convention/x64_gcc/: Makefile  factorial.S  main.c  struct.S  sum.S  vecsum.S
docs/: conf.py  index.rst
examples/array/: CMakeLists.txt  main.cc  sum.asm
examples/div/: .gitignore  CMakeLists.txt  Makefile  div.asm  main.c
examples/share_var/: CMakeLists.txt  change_extern.asm  main.cc
isa/: cpuid64.asm  isa_detect64.asm
test_latency/: .gitignore  CMakeLists.txt  Makefile  fma.asm  main.cc  rdtsc.asm
